// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About, FourOhFour, PagesList, Search should render About without errors 1`] = `
<p>
  About tab:
</p>
`;

exports[`About, FourOhFour, PagesList, Search should render FourOhFour without errors 1`] = `
<p>
  404 Not found
</p>
`;

exports[`About, FourOhFour, PagesList, Search should render PagesList without errors 1`] = `
<div>
  <ul />
</div>
`;

exports[`About, FourOhFour, PagesList, Search should render Search without errors 1`] = `
<div
  className="main-layout-wrapper"
>
  <Connect(withRouter(Header)) />
  <ResultsBox />
</div>
`;
